--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Reset */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,6 +20,67 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+
+/* Main Styling */
 body {
+	background-color: #dcdcdd;
   font-family: 'Lato', sans-serif;
+	font-size: 18px;
+}
+
+/* NavBar */
+nav ul {
+	background: #fff;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	justify-content: stretch;
+	list-style: none;
+	width: auto;
+}
+
+nav ul li {
+	border-bottom: 3px solid #fff;
+	display: block;
+	justify-self: stretch;
+	text-align: center;
+	transition: all 0.2s;
+}
+
+nav ul li:hover {
+	border-bottom: 3px solid #46494c;
+}
+
+nav ul li a {
+	color: #46494c;
+	display: block;
+	text-decoration: none;
+	padding-bottom: 15px;
+	padding-top: 15px;
+}
+
+nav ul li a:link,
+nav ul li a:visited {
+	color: #46494c;
+}
+
+img {
+	max-width: 60px;
+	height: auto;
+}
+
+
+ /* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
