Added styling for main title, sizing for h1, color, centering and box sizing

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ time, mark, audio, video {
 /* Main Styling */
 body {
 	background-color: #dcdcdd;
+	color: #46494c;
   font-family: 'Lato', sans-serif;
 	font-size: 18px;
 }
@@ -63,6 +64,23 @@ nav ul li a:visited {
 	color: #46494c;
 }
 
+
+/* Title */
+#title {
+	margin: 20px auto;
+	padding: 15px;
+	text-align: center;
+	/* width: 92vw; */
+}
+
+#title h1 {
+	font-size: 35px;
+	margin-bottom: 5px;
+}
+
+
+/* -*-*-*- */
+
 img {
 	max-width: 60px;
 	height: auto;
@@ -75,6 +93,10 @@ img {
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+	/* Title */
+	/* #title {
+		width: 94vw;
+	} */
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -83,4 +105,8 @@ img {
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+	/* Title */
+	/* #title {
+		width: 96vw;
+	} */
 }
