--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
@@ -82,6 +82,7 @@ nav ul li a:visited {
 #intro {
 	background-color: #fff;
 	border-radius: 2px;
+	line-height: 1.6;
 	margin: 0px 30px 20px 30px;
 	padding: 20px;
 	text-align: center;
@@ -94,10 +95,25 @@ nav ul li a:visited {
 	max-width: 300px;
 }
 
+/* Timeline */
+#timeline {
+	max-width: 450px;
+	margin: 0 auto 50px auto;
+	line-height: 1.8;
+}
+
+#timeline h2 {
+	font-size: 28px;
+	padding: 20px 0;
+}
+
 
 
  /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
+	#timeline {
+		max-width: 500px;
+	}
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -110,7 +126,6 @@ nav ul li a:visited {
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-	/* Intro */
 	#intro img {
 		max-width: 350px;
 	}
