--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var,
-b, u, i, center,
+b, u, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -110,7 +110,9 @@ nav ul li a:visited {
 /* Quotes */
 #quotes {
 	line-height: 1.6;
+	margin: auto;
 	margin-bottom: 50px;
+	max-width: 80vw;
 	text-align: center;
 }
 
